test/CheckError/Const/CallNonConstMethodOnConstTemplateVar.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

interface Changeable {
	void modify();
}

template <typename T>
void function(const T& object) require(T : Changeable) {
	// CHECK: .loci:11:2: error: cannot refer to mutator method 'modify' from const object of type 'const(T)'
	object.modify();
}

// CHECK: 1 error generated.
